--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/brendanluu/sculptureApp#readme",
   "dependencies": {
     "express": "^4.15.4",
+    "http": "0.0.0",
     "socket.io": "^2.0.3"
   }
 }
